--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                 
             </div>
             <div id="emailForm" class="email-form" style="display: none;">
-                <p>Block the sender?</p>
+                <p>Consequences</p>
                 <button id="seeMoreDetails" class="details-button">See More Details</button>
             </div>
             
