--- a/templates/index2.html
+++ b/templates/index2.html
@@ -30,10 +30,9 @@
             </form>
             
             <div id="result" class="result-box"></div>
-            <div id="emailForm" class="email-form" style="display: none;">
-                <p>Block the sender?</p>
-                <button id="seeMoreDetails" class="details-button">See More Details</button>
-            </div>
+            <!-- Block Sender Button (Initially hidden) -->
+            <button id="block-Email" class="btn glow-button" style="display:none;">Block Sender</button>
+        <p id="blockMessage" class="message"></p>
             
         </main>
     </div>
@@ -41,4 +40,5 @@
         <p>&copy; 2024 Cyber Shield | Protecting Your Digital Footprint</p>
     </footer>
     <script src="static/script2.js"></script>
+    <script src="static/phishingscript.js"></script>
 </body>
